--- a/notebooks/html/01. Why Machine Learning and Security.html
+++ b/notebooks/html/01. Why Machine Learning and Security.html
@@ -12056,10 +12056,9 @@ Malli löysi kaikenkaikkiaan 55564 mustalistattua sanaa.
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
-<span class="n">results</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span>
-    <span class="n">data</span><span class="o">=</span><span class="p">[[</span><span class="n">true_neg</span><span class="p">,</span><span class="n">false_pos</span><span class="p">],[</span><span class="n">false_neg</span><span class="p">,</span><span class="n">true_pos</span><span class="p">]],</span>
-    <span class="n">index</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;model_0&#39;</span><span class="p">,</span><span class="s1">&#39;model_1&#39;</span><span class="p">],</span><span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;true_0&#39;</span><span class="p">,</span><span class="s1">&#39;true_1&#39;</span><span class="p">]</span>
-<span class="p">)</span>
+<span class="n">results</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="p">[[</span><span class="n">true_neg</span><span class="p">,</span> <span class="n">false_pos</span><span class="p">],</span> <span class="p">[</span><span class="n">false_neg</span><span class="p">,</span> <span class="n">true_pos</span><span class="p">]],</span>
+                       <span class="n">index</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;model_0&#39;</span><span class="p">,</span> <span class="s1">&#39;model_1&#39;</span><span class="p">],</span> <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;true_0&#39;</span><span class="p">,</span> <span class="s1">&#39;true_1&#39;</span><span class="p">])</span>
+<span class="n">results_p</span> <span class="o">=</span> <span class="n">results</span><span class="o">/</span><span class="n">results</span><span class="o">.</span><span class="n">sum</span><span class="p">()</span><span class="o">.</span><span class="n">sum</span><span class="p">()</span><span class="o">*</span><span class="mi">100</span>
 <span class="n">results</span>
 </pre></div>
 
@@ -12136,8 +12135,7 @@ Malli löysi kaikenkaikkiaan 55564 mustalistattua sanaa.
 <div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">results_p</span> <span class="o">=</span> <span class="n">results</span><span class="o">/</span><span class="n">results</span><span class="o">.</span><span class="n">sum</span><span class="p">()</span><span class="o">.</span><span class="n">sum</span><span class="p">()</span><span class="o">*</span><span class="mi">100</span>
-<span class="n">results_p</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">results_p</span>
 </pre></div>
 
 </div>
