--- a/html/01. Why Machine Learning and Security.html
+++ b/html/01. Why Machine Learning and Security.html
@@ -11781,7 +11781,7 @@ div#notebook {
 <script>
 $( document ).ready(function(){
 
-            var cfg = {"base_numbering": 1, "nav_menu": {}, "number_sections": false, "sideBar": true, "skip_h1_title": false, "title_cell": "Sis\u00e4llysluettelo", "title_sidebar": "Sis\u00e4llysluettelo", "toc_cell": true, "toc_position": {"height": "1158px", "left": "278px", "top": "111.133px", "width": "338px"}, "toc_section_display": true, "toc_window_display": false};
+            var cfg = {"base_numbering": 1, "nav_menu": {}, "number_sections": false, "sideBar": true, "skip_h1_title": false, "title_cell": "Sis\u00e4llysluettelo", "title_sidebar": "Sis\u00e4llysluettelo", "toc_cell": true, "toc_position": {"height": "1158px", "left": "278px", "top": "111.133px", "width": "338px"}, "toc_section_display": true, "toc_window_display": true};
 
             // fire the main function with these parameters
             require(['nbextensions/toc2/toc2'], function (toc2) {
